--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 # vars file for abm-install
 
+# Version can be found:
 abm_version: "1.7.0"
 
 # Folder to run installation out of
@@ -26,10 +27,10 @@ install_type: standalone
 skip_preflight: false
 
 # Common across all clusters
-pod_cidr: "172.2.0.0/16"
-services_cidr: "10.90.0.0/24"    # avoid overlap with KIND IPs (10.96.0.0/16)
+pod_cidr: "172.24.0.0/16"
+services_cidr: "10.50.0.0/16"    # avoid overlap with KIND IPs (10.96.0.0/16)
 local_pvc_mount: "/opt/pvc-disk"
-enable_application_logging: false
+enable_application_logging: true
 
 # NOTE: Cluster-specific variables are in the inventory file
 
