--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -23,6 +23,7 @@
     cmd: kubectl taint nodes {{ cluster_name }} node-role.kubernetes.io/master:NoSchedule-
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  ignore_errors: yes
   tags:
   - abm-software
   - abm-config
@@ -75,13 +76,17 @@
 - name: "Install ACM Operator"
   shell: |
       kubectl apply -f {{ acm_config_files }}/config-management-operator.yaml
-      kubectl wait --for=condition=established --timeout=120s crd configmanagements.configmanagement.gke.io # Wait for ConfigManagement & RootSync CRDs
+      sleep 10s
+      kubectl wait --for=condition=established --timeout=600s crd configmanagements.configmanagement.gke.io # Wait for ConfigManagement & RootSync CRDs
       exit $?
   args:
     executable: /bin/bash
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   when: has_acm_operator == false
+  retries: 3
+  register: result
+  until: result.rc == 0
   tags:
   - acm-operator
 
@@ -107,8 +112,8 @@
 - name: "Create Config Management Configuration"
   shell: |
     kubectl apply -f {{ acm_config_files }}/config-management-configuration.yaml
-    sleep 5s
-    kubectl wait --for=condition=established --timeout=120s crd rootsyncs.configsync.gke.io
+    sleep 10s
+    kubectl wait --for=condition=established --timeout=600s crd rootsyncs.configsync.gke.io
     exit $?
   when:
     - has_config_management == false
@@ -160,10 +165,10 @@
 - name: "Apply Root Repo configuration"
   shell: |
     kubectl apply -f {{ acm_config_files }}/root-sync.yaml
-    sleep 5s
-    kubectl wait --for=condition=established --timeout=120s crd rootsyncs.configsync.gke.io
+    sleep 10s
+    kubectl wait --for=condition=established --timeout=600s crd rootsyncs.configsync.gke.io
     exit $?
-  # when: has_root_repo_installed == false
+  when: has_root_repo_installed == false
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   tags:
