--- a/abm_remove.yml
+++ b/abm_remove.yml
@@ -2,16 +2,12 @@
 ---
 
 # Installs Anthos Bare Metal on inventory of "workers"
+# must specify `--tags never` on the CLI to run this
 - hosts: workers
   become: true
   become_user: root
   roles:
-    - validate
-    - google-tools
-    - ready-ubuntu
-    - abm-install
-    - abm-software
-    - abm-login-token
+    - abm-remove
   vars:
     # Initial project ID to setup gcloud with
     - google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
@@ -20,6 +16,7 @@
 
     # ACM (using 'token' method)
     - acm_root_repo: "https://gitlab.com/mike-ensor/acm-multi-root-demo.git"
+    # NOTE: Configuration for ACM repo is in abm-software task
     # SCM (GitLab, GitHub access token)
     - scm_token_user: "{{ lookup('env', 'SCM_TOKEN_USER') }}"
     - scm_token_token: "{{ lookup('env', 'SCM_TOKEN_TOKEN') }}"
