--- a/roles/abm-remove/tasks/main.yml
+++ b/roles/abm-remove/tasks/main.yml
@@ -24,3 +24,11 @@
   tags:
     - abm-remove
     - never # must specify `--tags never` on the CLI to run this
+
+- name: Remove ACM Config files
+  ansible.builtin.file:
+    path: "{{ acm_config_files }}"
+    state: absent
+  tags:
+    - abm-remove
+    - never # must specify `--tags never` on the CLI to run this
