setting up standalone to only run ABM install so Reset can counter install and everything is from scratch

--- a/everything-install.yml
+++ b/everything-install.yml
@@ -6,6 +6,9 @@
   become: true
   become_user: root
   roles:
+    - validate
+    - google-tools
+    - ready-ubuntu
     - abm-install
     - abm-software
     - abm-login-token
