Resolve "Install GitLab secrets for Namespace Repos"

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ build.yml
 build.yaml
 roles/test-*/
 
+# Molecule
+.cache/
+
 # Generated configuration file
 k8s/overlays/**/configuration/*-hydrated.conf
 k8s/overlays/**/configuration/secrets/*.json
