--- a/inventory-example.yml
+++ b/inventory-example.yml
@@ -20,12 +20,12 @@
 
 workers:
   hosts:
+    vars:
+      shared_variable: "This is just a dummy message for all workers"
     nuc-1.lan:
       cluster_name: "nuc-1"
       franchise_number: "1"
       acm_cluster_name: "store-1-1"
-      namespace_repo_scm_token_value: "< ADD YOUR VALUE >"
-      namespace_repo_scm_user_value: "< ADD YOUR VALUE >"
       cluster_index: 0
       control_plane_ip: "{{ lookup('dig', 'nuc-1.lan') }}"
       control_plane_vip: "192.168.2.100"
@@ -35,8 +35,6 @@ workers:
       cluster_name: "nuc-2"
       franchise_number: "1"
       acm_cluster_name: "store-1-2"
-      namespace_repo_scm_token_value: "< ADD YOUR VALUE >"
-      namespace_repo_scm_user_value: "< ADD YOUR VALUE >"
       cluster_index: 1
       control_plane_ip: "{{ lookup('dig', 'nuc-2.lan') }}"
       control_plane_vip: "192.168.2.110"
@@ -46,8 +44,6 @@ workers:
       cluster_name: "nuc-3"
       franchise_number: "2"
       acm_cluster_name: "store-2-1"
-      namespace_repo_scm_token_value: "< ADD YOUR VALUE >"
-      namespace_repo_scm_user_value: "< ADD YOUR VALUE >"
       cluster_index: 2
       control_plane_ip: "{{ lookup('dig', 'nuc-3.lan') }}"
       control_plane_vip: "192.168.2.120"
@@ -57,8 +53,6 @@ workers:
       cluster_name: "nuc-4"
       franchise_number: "2"
       acm_cluster_name: "store-2-2"
-      namespace_repo_scm_token_value: "< ADD YOUR VALUE >"
-      namespace_repo_scm_user_value: "< ADD YOUR VALUE >"
       cluster_index: 3
       control_plane_ip: "{{ lookup('dig', 'nuc-4.lan') }}"
       control_plane_vip: "192.168.2.130"
@@ -68,8 +62,6 @@ workers:
       cluster_name: "nuc-5"
       franchise_number: "3"
       acm_cluster_name: "store-3-1"
-      namespace_repo_scm_token_value: "< ADD YOUR VALUE >"
-      namespace_repo_scm_user_value: "< ADD YOUR VALUE >"
       cluster_index: 4
       control_plane_ip: "{{ lookup('dig', 'nuc-5.lan') }}"
       control_plane_vip: "192.168.2.140"
