--- a/inventory-example.yml
+++ b/inventory-example.yml
@@ -18,6 +18,50 @@
 
 # Comment out (or remove) any inventory that is not available
 
+all:
+  vars:
+    google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
+    google_region: "{{ lookup('env', 'REGION') | default('us-central1', True) }}"
+    google_zone: "{{ lookup('env', 'ZONE') | default('us-central1-a', True) }}"
+    # SCM (GitLab, GitHub access token)
+    scm_token_user: "{{ lookup('env', 'SCM_TOKEN_USER') }}"
+    scm_token_token: "{{ lookup('env', 'SCM_TOKEN_TOKEN') }}"
+
+    # GCS bucket containing VMs
+    gcs_bucket_guest_vm: "anthos-gcs-bucket-with-iso-images"
+    # VM ISO for guest OS
+    vm_guest_image: "windows-server-2016-eval-en-us.iso"
+
+    franchises: [
+      {
+        franchise_number: "1",
+        git_creds_gcp_secret_name: "franchise-1-git-creds",
+        franchise_name: "ACME",
+        stores: [
+          "nuc-1",
+          "nuc-2"
+        ]
+      },
+      {
+        franchise_name: "Innotec",
+        franchise_number: "2",
+        git_creds_gcp_secret_name: "franchise-2-git-creds",
+        stores: [
+          "nuc-3",
+          "nuc-4"
+        ]
+      },
+      {
+        franchise_name: "Penatrode",
+        franchise_number: "3",
+        git_creds_gcp_secret_name: "franchise-3-git-creds",
+        stores: [
+          "nuc-5"
+        ]
+      }
+    ]
+
+
 workers:
   hosts:
     vars:
