Created a cloud analog where the GCE instance(s) is pre-setup to a baseline that represents the exact-same as a default Ubuntu 20.04 LTE NUC/machine. The same Ansible playbooks are then used to provision ABM on the GCE and/or NUCs.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ tmp/
 # local Inventory files are not stored
 inventory.yml
 inventory.yaml
+# GCP inventory files generated
+gcp.yaml
+gcp.yml
+
+inventory/*.yaml
 
 # Downloaded git repo
 serving/
