--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -80,6 +80,10 @@
   ansible.builtin.service:
     name: docker
     state: started
+    register: task_result
+    until: task_result.rc == 0
+    retries: 10
+    delay: 1
   tags:
   - docker
 
