Resolve "Setup KVM for Windows qemu emulation"

--- a/everything-install.yml
+++ b/everything-install.yml
@@ -9,6 +9,7 @@
     - validate
     - google-tools
     - ready-ubuntu
+    - setup-kvm
     - abm-install
     - abm-software
     - abm-login-token
