--- a/gce-everything-install.yml
+++ b/gce-everything-install.yml
@@ -9,6 +9,7 @@
     - cloud-infra
     - google-tools
     - ready-ubuntu
+    - setup-kvm
     - abm-install
     - abm-software
     - abm-login-token
