--- a/abm_remove.yml
+++ b/abm_remove.yml
@@ -3,7 +3,7 @@
 
 # Installs Anthos Bare Metal on inventory of "workers"
 # must specify `--tags never` on the CLI to run this
-- hosts: workers
+- hosts: cloud_type_abm
   become: true
   become_user: root
   roles:
