--- a/abm_standalone.yml
+++ b/abm_standalone.yml
@@ -2,7 +2,7 @@
 ---
 
 # Installs Anthos Bare Metal on inventory of "workers"
-- hosts: workers
+- hosts: all
   become: true
   become_user: root
   roles:
