--- a/roles/abm-remove/vars/main.yml
+++ b/roles/abm-remove/vars/main.yml
@@ -4,3 +4,5 @@ kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
 
 abm_install_folder: "/var/abm-install"
 abm_workspace_folder: "{{ abm_install_folder }}/bmctl-workspace"
+
+acm_config_files: "/var/acm-configs"
