--- a/update-servers.yml
+++ b/update-servers.yml
@@ -1,8 +1,6 @@
-- hosts: workers
+- hosts: all
   become: true
   become_user: root
   roles:
     - update
-  vars:
-    - google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
-    - tools_base_path: "/var/google-tools-install"
+  vars: []
