--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -164,18 +164,19 @@
     - initial-install
     - tool-install
 
-  - name: Unarchive a file that needs to be downloaded (added in 2.0)
+  - name: Adding k9s utility to machine (optional, but recommended)
     ansible.builtin.unarchive:
-      src: https://github.com/derailed/k9s/releases/download/v0.24.7/k9s_Linux_x86_64.tar.gz
+      src: https://github.com/derailed/k9s/releases/download/{{ k9s_version }}/k9s_{{ k9s_version }}_Linux_x86_64.tar.gz
       dest: /usr/local/bin
       remote_src: yes
+    ignore_errors: true
     tags:
     - optional
     - tool-install
 
-  - name: Download foo.conf
+  - name: Download virtctl (kubevirt CLI)
     get_url:
-      url: https://github.com/kubevirt/kubevirt/releases/download/v0.40.0/virtctl-v0.40.0-linux-amd64
+      url: https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-amd64
       dest: /usr/local/bin/virtctl
       mode: '0555' # Read & Executable by all
     tags:
